compiler/tests/fixtures/compile_errors/non_bool_or.fe
contract Foo:
    pub def bar(x: bool, y: u256) -> bool:
        return y or x